Bug 1714513 - Use ClipContentDescendants rather than ClipContainingBlockDescendants in nsPageContentFrame::BuildDisplayList. r=mattwoodrow

That way we guarantee to clip fixedpos boxes etc. This used to work
because this was further up the stack in nsPageFrame rather than
nsPageContentFrame:

  https://hg.mozilla.org/integration/autoland/rev/029a5e8fa8f3179b63a7bf291ea689c4dd642492#l6.262

Differential Revision: https://phabricator.services.mozilla.com/D116857